--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Blog <span id="tagline">Tu blog de confianza.</span>
+                Blog <span id="tagline">Tu blog de cabecera .</span>
             </div> 
             <div id="post">
                 <h1>Este es el titulo de post</h1>
