--- a/blogpost.html
+++ b/blogpost.html
@@ -6,13 +6,14 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Blog <span id="tagline">Tu blog de confianza.</span>
+                Blog <span id="tagline">Tu blog de master .</span>
             </div> 
             <div id="post">
                 <h1>Este es el titulo de post</h1>
                 <p>Y este es el parrafo de inicio donde
                     vamos a explicar todo lo correspondiente
                     a las ramas.</p>
+                    <p>Suscribete y dale like. </p>
             </div>
         </div>
     </body>
