Se agrega documentación y se agrega configuración utf-8

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <title>Bienvenido a Hyperblog.</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
@@ -11,12 +12,12 @@
                 <span id="tagline">Tu blog de cabecera .</span>
             </div> 
             <div id="post">
-                <h1>Este es el titulo de post</h1>
+                <h1>Este es el título de post</h1>
                 <p>Y este es el parrafo de inicio donde
                     vamos a explicar todo lo correspondiente
                     a las ramas.</p>
                 <p>Suscribete y dale like. </p>
-            </div>
+            </div>            
         </div>
     </body>
 </html>
