--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,9 @@
                     a las ramas.</p>
                     <p>Suscribete y dale like. </p>
             </div>
+            <div id="footer">
+                Hecho con el curso de Platzi.
+            </div>
         </div>
     </body>
 </html>
