Ajuste de tildes en el post

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             </div> 
             <div id="post">
                 <h1>Este es el título de post</h1>
-                <p>Y este es el parrafo de inicio donde
+                <p>Y este es el párrafo de inicio donde
                     vamos a explicar todo lo correspondiente
                     a las ramas.</p>
                 <p>Suscribete y dale like. </p>
