Se agregan imagenes y el gitignore para no subir estos archivos al repositorio

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,8 @@
                 <p>Y este es el párrafo de inicio donde
                     vamos a explicar todo lo correspondiente
                     a las ramas.</p>
-                <p>Suscribete y dale like. </p>
+                <p>Suscribete y dale like.</p>
+                <p>James Nope Agudelo.</p>
             </div> 
             <div id="footer">
                 Hecho con el curso de Platzi.
