Se agrega una imagen de imgur

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,9 @@
                     a las ramas.</p>
                 <p>Suscribete y dale like.</p>
                 <p>James Nope Agudelo.</p>
+                <p> 
+                    <img src="https://i.imgur.com/XGBdp8K.jpeg" alt="Prueba de imagen">
+                </p>
             </div> 
             <div id="footer">
                 Hecho con el curso de Platzi.
