--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title>Bienvenido a Hyperblog.</title>
+        <title>Bienvenido a Hyperblog</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
@@ -9,7 +9,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog 
-                <span id="tagline">Tu blog de cabecera .</span>
+                <span id="tagline">Tu blog de cabecera</span>
             </div> 
             <div id="post">
                 <h1>Este es el título de post</h1>
